--- a/www/customs_errors/custom_404.html
+++ b/www/customs_errors/custom_404.html
@@ -2,10 +2,13 @@
 <html>
 
 <style>
+    @font-face{ font-family: 'ethnocentric'; src: url('../fonts/ethnocentric rg.ttf') format('truetype');	}
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
     body { background-color: #333333; }
     #errorDiv { 
         width: 1000px;
         height: 400px;
+        line-height: 400px;
         margin: 0px;
         padding: 0px;
         margin: auto;
@@ -18,6 +21,18 @@
         text-align: center;
         vertical-align: middle;
     }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 30px;
+        display: inline-block;
+        vertical-align: middle;
+        line-height: normal;
+    }
+
 </style>
 
 <head>
@@ -25,8 +40,9 @@
 </head>
 
 <body>
+    <h1>REPOMANAGER</h1>
 <div id="errorDiv">
-    Page introuvable
+    <p>Page introuvable</p>
 </div>
 
 
