--- a/www/customs_errors/custom_404.html
+++ b/www/customs_errors/custom_404.html
@@ -12,18 +12,21 @@
         margin: 0px;
         padding: 0px;
         margin: auto;
+        font-family: 'Montserrat', sans-serif;
+        color: whitesmoke;
+        text-align: center;
         border-radius: 10px;
         box-shadow:
         0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
         0px 2px 2px 0px rgba(255, 255, 255, 0.2);
         background-color:#2b2b2b;
-        color: whitesmoke;
-        text-align: center;
-        vertical-align: middle;
     }
 
     h1 {
         font-size: 40px;
+        font-family: 'ethnocentric';
+        color: whitesmoke;
+        text-align: center;
     }
 
     p {
