--- a/www/public/custom_errors/custom_404.html
+++ b/www/public/custom_errors/custom_404.html
@@ -7,7 +7,7 @@
     <body>
         <div id="errorDiv-container">
             <div id="errorDiv">
-                <p>Page introuvable</p>
+                <p>404: Page not found.</p>
             </div>
         </div>
     </body>
