--- a/www/public/custom_errors/custom_413.html
+++ b/www/public/custom_errors/custom_413.html
@@ -7,7 +7,7 @@
     <body>
         <div id="errorDiv-container">
             <div id="errorDiv">
-                <p>Taille de fichier trop importante<br>Augmentez la limite d'upload de votre serveur</p>
+                <p>413: File size too big.<br>Please increase upload limit of the server.</p>
             </div>
         </div>
     </body>
