--- a/www/public/custom_errors/custom_50x.html
+++ b/www/public/custom_errors/custom_50x.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Error</title>
-        <link rel="stylesheet" type="text/css" href="../../resources/styles/custom_errors.css">
+        <link rel="stylesheet" type="text/css" href="/resources/styles/custom_errors.css">
     </head>
     <body>
         <div id="errorDiv-container">
