--- a/www/public/custom_errors/custom_50x.html
+++ b/www/public/custom_errors/custom_50x.html
@@ -7,7 +7,7 @@
     <body>
         <div id="errorDiv-container">
             <div id="errorDiv">
-                <p>500: An error occured.</p>
+                <p>500: An error occurred.</p>
             </div>
         </div>
     </body>
